test/classes/initializers/generics/declarations/default_value_bad.good
default_value_bad.chpl:13: error: unresolved call 'Foo.init("blah")'
default_value_bad.chpl:7: note: this candidate did not match: Foo.init(xVal = 3)
default_value_bad.chpl:13: note: because call actual argument #1 with type string
default_value_bad.chpl:7: note: is passed to formal 'xVal: int(64)'
